# Python_Projects

./: README.md  py_project_create.txt  stop
Adivina_el_Numero/: pyproject.toml
Adivina_el_Numero/src/adivina_el_numero/: main.py
Analizador_Sentimientos/: pyproject.toml
Analizador_Sentimientos/src/analizador_sentimientos/: main.py
Calculadora_de_Ecuaciones/: pyproject.toml
Calculadora_de_Ecuaciones/src/calculadora_de_ecuaciones/: main.py
Calculadora_de_Ecuaciones/tests/: test.py
Pacman_Recreation/: pyproject.toml
Pacman_Recreation/src/pacman_recreation/: Estructuras.py  Jugador.py  Option.py  TecladoControler.py  main.py
Pacman_Recreation_V2/: pyproject.toml
Pacman_Recreation_V2/src/: Main.py
Pacman_Recreation_V2/src/Entities/: Player.py
Pacman_Recreation_V2/src/Input/: Teclado_Controller.py  Ventana_Controller.py
Pacman_Recreation_V2/src/settings/: Options.py
