[project]
name = "adivina-el-numero"
version = "0.1.0"
description = ""
authors = [
    {name = "gustavex22",email = "gustavex618@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "adivina_el_numero", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
